<resources>
    <string name="app_name">Protected Notes</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Read More</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="search_in_settings">search in settings</string>
    <string name="language">Language</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="notifications">Notifications</string>
    <string name="sounds">Sounds</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="rate_us">Reset Password</string>
    <string name="plusButton" translatable="false">+</string>
    <string name="protected_notes">Protected Notes</string>
    <string name="to_do_list">To do List</string>
    <string name="save">Save</string>
    <string name="selectLang">Select Language</string>
    <string name="password">Password</string>
    <string name="first_time_password_is_0000">first time password is 0000</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="Note_Title">Note Title</string>
    <string name="Add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="addToList">Add To List</string>
    <string name="Enter_Current_Password">Enter current Password</string>
    <string name="next">Next</string>
    <string name="EnterNewPassword">Enter New Password</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="PasswordHasBeenReset">Password has been reset</string>
    <string name="wrongPass">Wrong Password</string>
    <string name="protec">Protected Notes</string>
    <string name="Delete">"Delete "</string>
    <string name="yes">YES</string>
    <string name="question">\?</string>
    <string name="done_list">Done List</string>
    <string name="use_password">Use Password</string>
    <string name="empty_password">Password is empty</string>
</resources>