<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kono_protected2.android.protectednotes.ui.home.HomeFragment"
        android:label="@string/protected_notes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Settings"
        android:name="com.kono_protected2.android.protectednotes.Settings"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/to_do"
        android:name="com.kono_protected2.android.protectednotes.to_do"
        android:label="@string/to_do_list"
        tools:layout="@layout/fragment_to_do" />
    <fragment
        android:id="@+id/done"
        android:name="DoneDB.Done"
        android:label="@string/done_list"
        tools:layout="@layout/fragment_done" />


</navigation>