<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">



    <LinearLayout
        android:id="@+id/Settings_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:padding="4dp"
                android:text="@string/dark_mode"
                android:textColor="?attr/textTheme"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/DarkMode"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="6dp"
                android:showText="false"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                tools:checked="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:padding="4dp"
                android:text="Use Password"
                android:textColor="?attr/textTheme"
                android:textSize="14sp" />

            <Switch
                android:id="@+id/UsePasswordSwitch"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="6dp"
                android:showText="false"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                tools:checked="false"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />


        <TextView
            android:id="@+id/Language_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            android:text="@string/language"
            android:textColor="?attr/textTheme"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="80dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:layout_weight="8"-->
<!--                android:padding="4dp"-->
<!--                android:text="@string/remove_ads"-->
<!--                android:textColor="?attr/textTheme"-->
<!--                android:textSize="14sp" />-->

<!--            <Switch-->
<!--                android:theme="@style/Platform.MaterialComponents"-->
<!--                android:id="@+id/RemoveAds_Switch"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:padding="6dp"-->
<!--                android:showText="false"-->
<!--                tools:checked="false"-->
<!--                android:thumb="@drawable/thumbbb"-->
<!--                android:track="@drawable/track2"/>-->
<!--        </LinearLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="22dp"
            android:background="?attr/line" />


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:layout_marginEnd="80dp"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:layout_weight="8"-->
<!--                android:padding="4dp"-->
<!--                android:text="@string/notifications"-->
<!--                android:textColor="?attr/textTheme"-->
<!--                android:textSize="14sp" />-->

<!--            <Switch-->
<!--                android:id="@+id/Notifications_Switch"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                android:padding="6dp"-->
<!--                android:showText="false"-->
<!--                android:theme="@style/Platform.MaterialComponents"-->
<!--                tools:checked="false"-->
<!--                android:thumb="@drawable/thumbbb"-->
<!--                android:track="@drawable/track2"/>-->
<!--        </LinearLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:padding="4dp"
                android:text="@string/sounds"
                android:textColor="?attr/textTheme"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                />

            <Switch
                android:id="@+id/Sound_Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="6dp"
                android:showText="false"
                android:theme="@style/Platform.MaterialComponents"
                tools:checked="false"
                android:thumb="@drawable/thumbbb"
                android:track="@drawable/track2"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:padding="4dp"
                android:text="@string/keep_screen_on"
                android:textColor="?attr/textTheme"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                />

            <Switch
                android:id="@+id/ScreenOn_Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="6dp"
                android:showText="false"
                android:theme="@style/Platform.MaterialComponents"
                tools:checked="false"
                android:thumb="@drawable/thumbbb"
                android:track="@drawable/track2"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />

        <TextView
            android:id="@+id/resetpassword_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            android:text="@string/rate_us"
            android:textColor="?attr/textTheme"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:background="?attr/line" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>